update products page added filter and dialog

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ngrx/store": "^16.3.0",
     "@nx/angular": "17.1.2",
     "axios": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,7 +40,7 @@
     "@nx/cypress": "17.1.2",
     "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
-    "@nx/express": "17.1.2",
+    "@nx/express": "^17.1.2",
     "@nx/jest": "17.1.2",
     "@nx/js": "17.1.2",
     "@nx/node": "17.1.2",
