--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "@swc/core": "~1.3.85",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.202",
+    "@types/moment": "^2.13.0",
     "@types/node": "~18.7.1",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "cypress": "^13.0.0",
