--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "delete": "rm db.json"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.0.0",
