--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
+    "pg": "^8.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -58,6 +61,7 @@
     "@types/lodash": "^4.14.202",
     "@types/moment": "^2.13.0",
     "@types/node": "~18.7.1",
+    "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
